--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
-    "pg": "^7.17.0"
+    "pg": "^7.17.0",
+    "url-parse": "^1.4.7"
   },
   "devDependencies": {},
   "autoload": {
     "App": "./app"
+  },
+  "engines": {
+    "node": "12.13.0"
   }
 }
